--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Em busca aa cidade perdida</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Em busca aa cidade perdida</title>
 </head>
+
 <body>
-   <main>
+  <main>
     <div class="passo ativo" id="passo-0">
-        <p>Um dia desses, dentro de um livro da biblioteca da escola, descobri uma carta antiga sobre uma cidade perida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa cidade e eu decidi segui-las!</p>
-        <button class="btn-proximo"data-proximo="1">Rio de Janeiro</buton>
-        <button class="btn-proximo"data-proximo="2">Pernambuco</button>
-       <div class="passo" id="passo-1">
-        <p>Você começa sua jornada no Rio de Janeiro, subindo o Pico da Tijuca ao amanhecer para encontrar a primeira pista.</p>
-      <button class="btn-proximo" data-proximo="3">Procurar a pista no topo do pico</button>
-      <button class="btn-proximo" data-proximo="4"Desistir e voltar para casa </button>
+      <p>Um dia desses, dentro de um livro da biblioteca da escola, descobri uma carta antiga sobre uma cidade perida,
+        escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa cidade
+        e eu decidi segui-las!</p>
+      <button class="btn-proximo" data-proximo="1">Rio de Janeiro</buton>
+        <button class="btn-proximo" data-proximo="2">Pernambuco</button>
+        <div class="passo" id="passo-1">
+          <p>Você começa sua jornada no Rio de Janeiro, subindo o Pico da Tijuca ao amanhecer para encontrar a primeira
+            pista.</p>
+          <button class="btn-proximo" data-proximo="3">Procurar a pista no topo do pico</button>
+          <button class="btn-proximo" data-proximo="4" Desistir e voltar para casa </button>
 
 
 
 
         </div>
-   </main> 
+  </main>
 </body>
+
 </html
